--- a/解析传入的文本/解析传入的文本/Info.plist
+++ b/解析传入的文本/解析传入的文本/Info.plist
@@ -20,17 +20,17 @@
 	<key>AMCanShowWhenRun</key>
 	<true/>
 	<key>AMCategory</key>
-	<string>AMCategoryUtilities</string>
+	<string>AMCategoryText</string>
 	<key>AMDefaultParameters</key>
 	<dict/>
 	<key>AMDescription</key>
 	<dict>
 		<key>AMDAlert</key>
-		<string></string>
+		<string>解析传入的文本</string>
 		<key>AMDInput</key>
-		<string></string>
+		<string>解析传入的文本</string>
 		<key>AMDNote</key>
-		<string></string>
+		<string>解析传入的文本</string>
 		<key>AMDOptions</key>
 		<string></string>
 		<key>AMDRelatedActions</key>
@@ -38,9 +38,9 @@
 		<key>AMDRequires</key>
 		<string></string>
 		<key>AMDResult</key>
-		<string></string>
+		<string>解析传入的文本</string>
 		<key>AMDSummary</key>
-		<string>获取剪切板中的文本</string>
+		<string>解析传入的文本</string>
 		<key>AMDWebsite</key>
 		<string>(* AMDWebsite URL to additional information or documentation for the action goes here. (optional) *)</string>
 	</dict>
@@ -49,7 +49,7 @@
 	<key>AMKeywords</key>
 	<array/>
 	<key>AMName</key>
-	<string>获取剪切板中的文本</string>
+	<string>解析传入的文本</string>
 	<key>AMProvides</key>
 	<dict>
 		<key>Container</key>
@@ -68,14 +68,14 @@
 		<key>ApplyButton</key>
 		<string>(* Button label for user to add proposed Action, e.g. Add. *)</string>
 		<key>IgnoreButton</key>
-		<string>(* Button label for user not to add proposed Action, e.g. Don't Add. *)</string>
+		<string>(* Button label for user not to add proposed Action, e.g. Don&apos;t Add. *)</string>
 		<key>Level</key>
 		<integer>0</integer>
 		<key>Message</key>
 		<string>(* Warning message presented to user goes here. *)</string>
 	</dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<string>zh_CN</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -93,6 +93,6 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2018年 com.lixiang. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
-	<string>_________</string>
+	<string>Json2property</string>
 </dict>
 </plist>
